--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>spark.examples</groupId>
 
-    <artifactId>DistributedMargot</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ParallelMargot</artifactId>
+    <version>1.0</version>
     <name>${project.artifactId}</name>
-    <description>My wonderfull scala app</description>
-    <inceptionYear>2010</inceptionYear>
     <licenses>
         <license>
             <name>My License</name>
